<resources>
    <string name="app_name">Autopilot</string>
    <string name="start_mission">Start Mission</string>
    <string name="connect_on_startup">Connect on startup</string>
    <string name="disconnect">Disconnect</string>
    <string name="status_network">Network connection status:&#160;</string>
    <string name="status_fc">FC connection status:&#160;</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_awaiting_connection">Awaiting connection…</string>
    <string name="fc_status_device_found">USB device found. Check permissions…</string>
    <string name="fc_status_permission_requested">USB device permissions requested…</string>
    <string name="fc_status_permission_denied">USB device permissions denied.</string>
    <string name="fc_status_permission_granted">USB device permissions granted. Try to open serial port connection…</string>
    <string name="fc_status_serial_port_error">Serial port error / port closed.</string>
    <string name="fc_status_serial_port_opened">Serial port opened.</string>
    <string name="check_fc_version">&#160;Check FC version…</string>
    <string name="detected">&#160;detected.</string>
    <string name="fc_api_compatibility_error">&#160;!!! Error - FC API is not compatible !!!</string>
    <string name="fc_api_compatibility_warning">&#160;Warning - FC API minor version is not compatible.</string>
    <string name="version">Ver.:&#160;%1$s</string>
    <string name="azimuth">Azimuth</string>
    <string name="distance">Distance to target(in meters)</string>
    <string name="fly_height">Fly height</string>
    <string name="fly_speed">Fly speed</string>
    <string-array name="connection_modes">
        <item><b>Connect over server</b></item>
        <item><b>Direct connection</b></item>
    </string-array>
    <string name="connection_mode_server"><i>Connect both phones to the server\'s public IP</i></string>
    <string name="connection_mode_vpn"><i>Connect the Control app to the IP of this phone (VPN or Wi-Fi)</i></string>
</resources>