<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_fc" />

        <TextView
            android:id="@+id/tvFcConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_disconnected" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_azimuth"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/azimuth"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_distance"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/distance"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_height"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/fly_height"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/editText_speed"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/fly_speed"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:autofillHints="password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_mission" />

    </LinearLayout>

</LinearLayout>